# clam-prov

./: CMakeLists.txt  README.md  install.sh
py/: CMakeLists.txt  clam-prov.py  clam-prov.py.in
rt/: wrappers.c
src/: CMakeLists.txt  clam-prov.cpp  config.h.cmake  sources-sinks.config
src/Instrumentation/: AddLogging.cpp  AddLogging.h  AddMetadata.cpp  AddMetadata.h  AnnotateSources.cpp  AnnotateSources.h  OutputDependencyMap.cpp  OutputDependencyMap.h  OutputResults.cpp  OutputResults.h  ProvMetadata.cpp  ProvMetadata.h  ReadMetadata.cpp  ReadMetadata.h  WrapFunctions.cpp  WrapFunctions.h  WrapSinks.cpp  WrapSinks.h
src/Instrumentation/AddMetadata/: AddMetadata.cpp  AddMetadata.h
src/Logging/: clam-prov-logger.c  clam-prov-logger.h
src/Util/: CallSiteLogReader.c  DummyMainFunction.cpp  DummyMainFunction.h  SourcesAndSinks.cpp  SourcesAndSinks.h
tests/: CMakeLists.txt  README.md  lit.cfg
tests/test1/: AddMetadata.config  DependencyMap.output.expected  addMetadata.config  addMetadata.output  test.c
tests/test10/: DependencyMap.output.expected  test.c
tests/test11/: DependencyMap.output.expected  test.c
tests/test12/: DependencyMap.output.expected  test.c
tests/test13/: test.c
tests/test14/: DependencyMap.output.expected  test.c
tests/test15/: DependencyMap.output.expected  test.c
tests/test16/: test.c
tests/test17/: AddMetadata.config  test.c
tests/test18/: AddMetadata.config  DependencyMap.output.expected  test.c
tests/test19/: test.c
tests/test2/: AddMetadata.config  test.c  test2.c
tests/test20/: DependencyMap.output.expected  test.c
tests/test21/: DependencyMap.output.expected  test.c
tests/test22/: AddMetadata.config  test.c
tests/test23/: AddMetadata.config  DependencyMap.output.expected  test.c
tests/test24/: AddMetadata.config  DependencyMap.output.expected  test.c
tests/test3/: AddMetadata.config  test.c
tests/test4/: AddMetadata.config  DependencyMap.output.expected  test.c
tests/test5/: test.c
tests/test6/: test.c
tests/test7/: DependencyMap.output.expected  test.c
tests/test8/: DependencyMap.output.expected  test.c
tests/test9/: test.c
vagrant/20.04/: Vagrantfile  (+1 more)
